fixed broken css ?

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ Styles by Gavroche with <3
 }
 
 body {
-  background-image: url("https://G4vr0ch3.github.io/images/background.png");
+  background-image: url("https://g4vr0ch3.github.io/images/background.png");
   background-position: top;
   background-size: cover;
 }
